[skip ci] [ci skip] Fix license

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,8 +56,7 @@ about:
   summary: Executes arbitrary R or C functions some time after the current time, after the R
     execution stack has emptied.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
