--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.7.3' %}
+{% set version = '0.7.5' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,16 +7,14 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: later_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/later_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/later/later_{{ version }}.tar.gz
-  sha256: 5c57148c255ee5da61cb748550b73bad7094f4e045b99b362473be5e3dbc4212
+  sha256: 317cdee7555b08de27d03327f32deb2bfead0f63aa70b37e41f54f55cfb01c76
 
 build:
   merge_build_host: True  # [win]
   number: 1000
-  skip: true  # [win32]
   rpaths:
     - lib/R/lib/
     - lib/
@@ -27,10 +25,13 @@ requirements:
     - {{ compiler('cxx') }}      # [not win]
     - {{native}}toolchain        # [win]
     - {{posix}}filesystem        # [win]
-    - {{posix}}make
-    - {{posix}}sed  # [win]
-    - {{posix}}coreutils  # [win]
     - {{posix}}sed               # [win]
+    - {{posix}}grep              # [win]
+    - {{posix}}autoconf
+    - {{posix}}automake          # [not win]
+    - {{posix}}automake-wrapper  # [win]
+    - {{posix}}pkg-config
+    - {{posix}}make
     - {{posix}}coreutils         # [win]
     - {{posix}}zip               # [win]
   host:
@@ -56,13 +57,30 @@ about:
   summary: Executes arbitrary R or C functions some time after the current time, after the R
     execution stack has emptied.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
+    - conda-forge/r
     - halldc
+
+# Package: later
+# Type: Package
+# Title: Utilities for Delaying Function Execution
+# Version: 0.7.5
+# Authors@R: c( person("Joe", "Cheng", role = c("aut", "cre"), email = "joe@rstudio.com"), person(family = "RStudio", role = "cph"), person("Marcus", "Geelnard", role = c("ctb", "cph"), comment = "TinyCThread library, https://tinycthread.github.io/"), person("Evan", "Nemerson", role = c("ctb", "cph"), comment = "TinyCThread library, https://tinycthread.github.io/") )
+# Description: Executes arbitrary R or C functions some time after the current time, after the R execution stack has emptied.
+# URL: https://github.com/r-lib/later
+# BugReports: https://github.com/r-lib/later/issues
+# License: GPL (>= 2)
+# Imports: Rcpp (>= 0.12.9), rlang
+# LinkingTo: Rcpp, BH
+# RoxygenNote: 6.1.0
+# Suggests: knitr, rmarkdown, testthat
+# VignetteBuilder: knitr
+# NeedsCompilation: yes
+# Packaged: 2018-09-14 22:59:16 UTC; jcheng
+# Author: Joe Cheng [aut, cre], RStudio [cph], Marcus Geelnard [ctb, cph] (TinyCThread library, https://tinycthread.github.io/), Evan Nemerson [ctb, cph] (TinyCThread library, https://tinycthread.github.io/)
+# Maintainer: Joe Cheng <joe@rstudio.com>
+# Repository: CRAN
+# Date/Publication: 2018-09-18 22:20:03 UTC
