Remove r-bh from run requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   rpaths:
     - lib/R/lib/
     - lib/
@@ -43,7 +43,8 @@ requirements:
   run:
     - r-base
     - {{native}}gcc-libs         # [win]
-    - r-bh
+    # BH is the header-only part of Boost and thus a compile-time requirement only
+    # - r-bh
     - r-rcpp >=0.12.9
     - r-rlang
 
