--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,14 +37,11 @@ requirements:
     - {{ posix }}zip               # [win]
   host:
     - r-base
-    - r-bh
     - r-rcpp >=0.12.9
     - r-rlang
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
-    # BH is the header-only part of Boost and thus a compile-time requirement only
-    # - r-bh
     - r-rcpp >=0.12.9
     - r-rlang
 
@@ -55,10 +52,12 @@ test:
 
 about:
   home: https://github.com/r-lib/later
-  license: GPL (>= 2)
+  license: MIT
   summary: Executes arbitrary R or C functions some time after the current time, after the R execution stack has emptied.
-  license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+  license_family: MIT
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/MIT
+    - LICENSE
 
 extra:
   recipe-maintainers:
