--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,18 +16,22 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
-    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
-    - r-rlang                    # [build_platform != target_platform]
-    - r-rcpp                     # [build_platform != target_platform]
-    - {{ compiler('c') }}        # [not win]
-    - {{ stdlib("c") }}          # [not win]
-    - {{ compiler('cxx') }}      # [not win]
-    - {{ compiler('m2w64_c') }}        # [win]
-    - {{ stdlib("m2w64_c") }}          # [win]
-    - {{ compiler('m2w64_cxx') }}        # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+    - r-rlang                      # [build_platform != target_platform]
+    - r-rcpp                       # [build_platform != target_platform]
+    - {{ compiler('c') }}          # [not win]
+    - {{ stdlib("c") }}            # [not win]
+    - {{ compiler('cxx') }}        # [not win]
+    - {{ compiler('m2w64_c') }}    # [win]
+    - {{ stdlib("m2w64_c") }}      # [win]
+    - {{ compiler('m2w64_cxx') }}  # [win]
     - {{ posix }}filesystem        # [win]
     - {{ posix }}sed               # [win]
     - {{ posix }}grep              # [win]
@@ -65,24 +69,3 @@ extra:
   recipe-maintainers:
     - conda-forge/r
     - halldc
-
-# Package: later
-# Type: Package
-# Title: Utilities for Delaying Function Execution
-# Version: 0.7.5
-# Authors@R: c( person("Joe", "Cheng", role = c("aut", "cre"), email = "joe@rstudio.com"), person(family = "RStudio", role = "cph"), person("Marcus", "Geelnard", role = c("ctb", "cph"), comment = "TinyCThread library, https://tinycthread.github.io/"), person("Evan", "Nemerson", role = c("ctb", "cph"), comment = "TinyCThread library, https://tinycthread.github.io/") )
-# Description: Executes arbitrary R or C functions some time after the current time, after the R execution stack has emptied.
-# URL: https://github.com/r-lib/later
-# BugReports: https://github.com/r-lib/later/issues
-# License: GPL (>= 2)
-# Imports: Rcpp (>= 0.12.9), rlang
-# LinkingTo: Rcpp, BH
-# RoxygenNote: 6.1.0
-# Suggests: knitr, rmarkdown, testthat
-# VignetteBuilder: knitr
-# NeedsCompilation: yes
-# Packaged: 2018-09-14 22:59:16 UTC; jcheng
-# Author: Joe Cheng [aut, cre], RStudio [cph], Marcus Geelnard [ctb, cph] (TinyCThread library, https://tinycthread.github.io/), Evan Nemerson [ctb, cph] (TinyCThread library, https://tinycthread.github.io/)
-# Maintainer: Joe Cheng <joe@rstudio.com>
-# Repository: CRAN
-# Date/Publication: 2018-09-18 22:20:03 UTC
