--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,7 +57,8 @@ test:
     - "\"%R%\" -e \"library('later')\""  # [win]
 
 about:
-  home: https://github.com/r-lib/later
+  home: https://r-lib.github.io/later/
+  dev_url: https://github.com/r-lib/later
   license: MIT
   summary: Executes arbitrary R or C functions some time after the current time, after the R execution stack has emptied.
   license_family: MIT
